--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,21 @@
     margin: 0;
 }
 
+.bodydiv{
+    width: 1100px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+/* div{
+    padding-left: 8px;
+    padding-right: 8px;
+} */
+
+main{
+    margin-left: 8px;
+}
+
 .contenitore{
     background-color: white;
 }
@@ -22,12 +37,45 @@ header{
 
 #logo{
     height: 100px;
-    padding-bottom: 10px;
     /* position: relative;
     top: 70px | (LA SOLUZIONE PIù CORRETTA SAREBBE STATA QUESTA MA DATO CHE TEORICAMENTE NEL CORSO CON SIMONE NON ABBIAMO ANCORA AFFRONTATO QUESTO ATTRIBUTO MI SONO ARRANGIATO DEFINENDO LE ALTEZZE DEI 2 DIV CON CLASSE logocontainer E logotopspace SOPRAELENCATI)*/
 }
 
 h1{
-    font-size: 80px;
+    font-size: 42px;
 }
 
+.riconoscimenti{
+    color: grey;
+    font-size: 20px;
+}
+
+#thebooleaner{
+    color: rgb(32 169 229);
+}
+
+#data{
+    font-size: 15px;
+    color: gray;
+}
+
+.evidenziatore{
+    background-color: yellow;
+}
+
+.thlarghezza{
+    width: 200px;
+    color: white;
+    font-style:;
+    background-color: rgb(32 169 229);
+}
+
+.thlarghezza1{
+    width: 600px;
+    color: white;
+    background-color: rgb(32 169 229);
+}
+
+.tdcolore{
+    background-color: rgb(81, 215, 233);
+}
