--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,6 @@
     padding-right: 8px;
 }
 
-/* div{
-    padding-left: 8px;
-    padding-right: 8px;
-} */
-
 main{
     margin-left: 8px;
 }
@@ -78,4 +73,18 @@ h1{
 
 .tdcolore{
     background-color: rgb(81, 215, 233);
+}
+
+.footer1{
+    color: white;
+    background-image: url(../img/monitor.jpg);
+    width: 312px;
+    height: 208px;
+}
+
+.footer2{
+    color: white;
+    background-image: url(../img/graph.jpg);
+    width: 311px;
+    height: 207px;
 }
